--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sistema de Gestion</title>
+    <link rel="stylesheet" href="Style\index.css">
+</head>
+<body>
+        <aside>
+            <div>
+                <img src="img\icon-empresa.jpg" alt="#">
+                <h4>NOMBRE DE LA EMPRESA O PROGRAMA</h4>
+            </div>
 
+            <div>
+                <div>
+                    <img src="img\icon-dev.png" alt="#">
+                    <a href="">Lista de Desarrolladores</a>
+                </div>
+
+                <div>
+                    <img src="img\icon-proyecto.png" alt="#">
+                    <div>
+                        <a href="">Proyecto</a>
+                        <a href="">Crear Proyecto</a>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="img\icon-create-user.png" alt="#">
+                    <div>
+                        <a href="">Crear Usuario</a>
+                        <a href="">Editar / Eliminar</a>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <img src="" alt="">
+            </div>
+        </aside>
+
+        <section>
+
+        </section>
+</body>
+</html>
