--- a/index.html
+++ b/index.html
@@ -6,33 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Gestion</title>
     <link rel="stylesheet" href="Style\index.css">
+
 </head>
 <body>
-        <aside>
-            <div>
-                <img src="img\icon-empresa.jpg" alt="#">
+        <aside class="aside">
+            <div class="enterprise">
+                <div class="img-icon"><img src="img\icon-empresa.jpg" alt="#"></div>
                 <h4>NOMBRE DE LA EMPRESA O PROGRAMA</h4>
             </div>
 
-            <div>
-                <div>
-                    <img src="img\icon-dev.png" alt="#">
-                    <a href="">Lista de Desarrolladores</a>
-                </div>
-
-                <div>
-                    <img src="img\icon-proyecto.png" alt="#">
-                    <div>
-                        <a href="">Proyecto</a>
-                        <a href="">Crear Proyecto</a>
+            <div class="list">
+                <div class="list-dev">
+                    <div class="img-icon">
+                        <img src="img\icon-dev.png" alt="#">
+                        <div>
+                            <a class="link" href="list-dev.html">Lista de Desarrolladores</a>
+                        </div>
                     </div>
                 </div>
 
-                <div>
-                    <img src="img\icon-create-user.png" alt="#">
-                    <div>
-                        <a href="">Crear Usuario</a>
-                        <a href="">Editar / Eliminar</a>
+                <div class="proyect">
+                    <div class="img-icon">
+                        <img src="img\icon-proyecto.png" alt="#">
+                        <div>
+                            <a class="link" href="#">Proyecto</a>
+                            <a class="link" href="#">Crear Proyecto</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <div class="img-icon">
+                        <img src="img\icon-create-user.png" alt="#">
+                        <div>
+                            <a class="link" href="#">Crear Usuario</a>
+                            <a class="link" href="#">Editar / Eliminar</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -45,5 +54,9 @@
         <section>
 
         </section>
+
+        <script src="Script\Script.js"></script>
 </body>
+
+
 </html>
